# reference-reimplementation

./: .gitignore  CMakeLists.txt  Image_displayer.cpp  Image_displayer.h  README.md  main.cpp
cmake_finds/: FindGenicamWrapper.cmake
